--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,7 +1,7 @@
 
 
 /* @font-face */ 
-/* @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,100;1,500&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,100;1,500&display=swap');
 @font-face{
     font-family: "Roboto";
     src: url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,100;1,500&display=swap');
