--- a/css/style.css
+++ b/css/style.css
@@ -195,11 +195,10 @@
     font-size: 35px;
 }
 
-.site-main > .services-area .services img{
+.site-main > .services-area .services {
     background: rgba(248, 252, 253, 0.973);
     padding: 2rem 0;
     width: 16rem;
-    height: 16rem;
     margin: 5rem .5rem;
     transition: box-shadow .7s ease;
 }
