--- a/css/style.css
+++ b/css/style.css
@@ -347,7 +347,7 @@ footer.footer-area .social a > i{
 }
 
 footer.footer-area .social a:hover > i{
-    color: var(--primary-color);
+    color: black;
 }
 
 
