--- a/css/style.css
+++ b/css/style.css
@@ -298,6 +298,7 @@
     background: url(../img/subscribe-bg.png) no-repeat;
     padding: 2rem 0;
     margin: 3rem auto;
+    width: 1169px;
 }
 
 .site-main .subscribe-us-area .subscribe .subscribe-title h4{
